Lab10/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend

  replicas: 2
  template: 
    metadata:
      labels: 
        app: backend
        
    spec:
      containers:
      - name: redis
        image: redis

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - port: 6379
      targetPort: 6379
