Lab10/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend

  replicas: 2
  template: 
    metadata:
      labels: 
        app: frontend
        
    spec:
      containers:
      - name: react-app
        image: tusiaa/react_app:release1

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend

spec:
  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000
