Lab10/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30001
  selector:
    app: postgres
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment
  labels: 
    app: postgres

spec:
  template:
    metadata:
      name: postgres-pod
      labels:
        app: postgres

    spec: 
      containers:
      - name: postgres
        image: postgres:alpine
        volumeMounts:
        - name: postgres-volume
          mountPath: /var/lib/postgresql/data 
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-volume-claim
      
  replicas: 1
  selector:
    matchLabels: 
      app: postgres
