Lab10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        backend:
          serviceName: backend-service
          servicePort: 6379
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 3000
